--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style type="text/css">
-    html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
-    <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw">
-    </script>
-    <script type="text/javascript"
-    src="js/map-custom.js">
-    </script>
-  </head>
-  <body>
-    <div id="map-canvas"></div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <title>Mapy usmrcení</title>
+  <meta name="description" content="">
+
+  <link rel="stylesheet" href="css/style.css">
+
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
+  <script type="text/javascript" src="js/map-custom.js"></script>
+  <script type="text/javascript" src="js/map-style.js"></script>
+
+</head>
+<body>
+  <div id="map-canvas"></div>
+</body>
 </html>
