--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style type="text/css">
     html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
     </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw">
     </script>
