--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Mapy usmrcení</title>
+  <title>Dokumentace usmrcených na československých státních hranicích 1948−1989</title>
   <meta name="description" content="">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -17,6 +17,13 @@
 
 </head>
 <body>
-  <div id="map-canvas"></div>
+  <header>
+    <h1 class="text-center">
+      Dokumentace usmrcených na československých státních hranicích 1948−1989
+    </h1>
+  </header>
+  <section class="map">
+    <div id="map-canvas"></div>
+  </section>
 </body>
 </html>
