--- a/index.html
+++ b/index.html
@@ -23,6 +23,46 @@
     </h1>
   </header>
   <section class="map">
+    <aside class="controls">
+      <h1>
+        Controls
+      </h1>
+      <hr>
+      <p>
+        <label for="radio_buttons">Radio Buttons:</label>
+        <label>
+          <input type="radio" class="radio" name="radio_button" value="radio_1"> Radio 1
+        </label>
+        <label>
+          <input type="radio" class="radio" name="radio_button" value="radio_2"> Radio 2
+        </label>
+        <label>
+          <input type="radio" class="radio" name="radio_button" value="radio_3"> Radio 3
+        </label>
+      </p>
+      <hr>
+      <p>
+        <label for="checkboxes">Checkboxes:</label>
+        <label>
+          <input type="checkbox" class="checkbox" name="checkboxes" value="check_1"> Checkbox 1
+        </label>
+        <label>
+          <input type="checkbox" class="checkbox" name="checkboxes" value="check_2"> Checkbox 2
+        </label>
+        <label>
+          <input type="checkbox" class="checkbox" name="checkboxes" value="check_3"> Checkbox 3
+        </label>
+      </p>
+      <hr>
+      <label class="label-switch left">
+        <input type="checkbox" />
+        <div class="checkbox"></div>
+      </label>
+      <label class="label-switch left">
+        <input type="checkbox" />
+        <div class="checkbox"></div>
+      </label>
+    </aside>
     <div id="map-canvas"></div>
   </section>
 </body>
