--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         Controls
       </h1>
       <hr>
+      <label for=obdobi>Období</label>
+      <input type=range min=1 max=5 value=1 id=obdobi step=1 list=zvolitObdobi oninput="outputUpdate(value)">
+      <datalist id=zvolitObdobi>
+        <option>Vše</option>
+        <option>1947-1950</option>
+        <option>1951-1965</option>
+        <option>1966-1971</option>
+        <option>1972-1989</option>
+      </datalist>
+      <output for=obdobi id=zvoleneObdobi>Vše</output>
+      <hr>
       <p>
         <label for="radio_buttons">Radio Buttons:</label>
         <label>
@@ -35,9 +46,6 @@
         </label>
         <label>
           <input type="radio" class="radio" name="radio_button" value="radio_2"> Radio 2
-        </label>
-        <label>
-          <input type="radio" class="radio" name="radio_button" value="radio_3"> Radio 3
         </label>
       </p>
       <hr>
@@ -48,9 +56,6 @@
         </label>
         <label>
           <input type="checkbox" class="checkbox" name="checkboxes" value="check_2"> Checkbox 2
-        </label>
-        <label>
-          <input type="checkbox" class="checkbox" name="checkboxes" value="check_3"> Checkbox 3
         </label>
       </p>
       <hr>
@@ -65,5 +70,14 @@
     </aside>
     <div id="map-canvas"></div>
   </section>
+
+  <script>
+  // Vypisuje hodnoty u slideru ovládajícího filtrování jednotlivých období
+  // http://demosthenes.info/blog/757/Playing-With-The-HTML5-range-Slider-Input
+  function outputUpdate(vol) {
+    document.querySelector('#zvoleneObdobi').value = vol;
+  }
+  </script>
+
 </body>
 </html>
