No refresh when moving slider

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </h1>
       <hr>
       <label for=obdobi>Období</label>
-      <input type=range min=1948 max=1990 value=1 id=obdobi step=1 list=zvolitObdobi onchange="initialize(value)">
+      <input type=range min=1948 max=1990 value=1 id=obdobi step=1 list=zvolitObdobi onchange="draw(map, mapsDataJSON, value)">
 
       <hr>
       <p>
