map-svg-overlap.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/map-custom.js"></script>
-  <script type="text/javascript" src="js/map-style.js"></script>
+  <script type="text/javascript" src="js/map-svg-overlap.js"></script>
 
 </head>
 <body>
