--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <p>
         <label for="radio_buttons">Radio Buttons:</label>
         <label>
+          <input type="radio" class="radio" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)" checked>Vše
+        </label>
+        <label>
           <input type="radio" class="radio" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)">1948-1950
         </label>
         <label>
@@ -47,36 +50,9 @@
           <input type="radio" class="radio" name="radio_button" value="1972,1989" onchange="draw(map, mapsDataJSON, value)">1972-1989
         </label>
       </p>
-      <hr>
-      <p>
-        <label for="checkboxes">Checkboxes:</label>
-        <label>
-          <input type="checkbox" class="checkbox" name="checkboxes" value="check_1"> Checkbox 1
-        </label>
-        <label>
-          <input type="checkbox" class="checkbox" name="checkboxes" value="check_2"> Checkbox 2
-        </label>
-      </p>
-      <hr>
-      <label class="label-switch left">
-        <input type="checkbox" />
-        <div class="checkbox"></div>
-      </label>
-      <label class="label-switch left">
-        <input type="checkbox" />
-        <div class="checkbox"></div>
-      </label>
     </aside>
     <div id="map-canvas"></div>
   </section>
-
-  <script>
-  // Vypisuje hodnoty u slideru ovládajícího filtrování jednotlivých období
-  // http://demosthenes.info/blog/757/Playing-With-The-HTML5-range-Slider-Input
-  function outputUpdate(vol) {
-    document.querySelector('#zvoleneObdobi').value = vol;
-  }
-  </script>
 
 </body>
 </html>
