--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title>Dokumentace usmrcených na československých státních hranicích 1948−1989</title>
+	<title>Přes železnou oponu: Usmrcení na československé hranici</title>
 	<meta name="description" content="">
 
 	<link rel="stylesheet" href="css/styles.css">
@@ -19,7 +19,9 @@
 <body>
 	<header>
 		<h1 class="">
-			Dokumentace usmrcených na československých státních hranicích 1948−1989
+			<span class="black">Přes železnou oponu </span>Usmrcení na&#160;československé hranici
+			<br>
+			<a href="#controls">&#8702; Aplikace</a>
 		</h1>
 		<article>
 			<p>
@@ -27,7 +29,15 @@
 			</p>
 		</article>
 	</header>
-	<aside class="controls">
+
+	<div class="text-center">
+		<h1>
+
+		</h1>
+	</div>
+	<br>
+
+	<aside id="controls" class="controls">
 		<div class="checkbox">
 			<label for="radio_buttons">Dle období</label>
 			<div class="options">
