--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<br>
 
 	<aside id="controls" class="controls">
-		<div class="checkbox">
+		<!-- <div class="checkbox">
 			<label for="radio_buttons">Dle období</label>
 			<div class="options">
 				<label class="text-center ">
@@ -54,12 +54,16 @@
 		</div>
 		<div class="slider">
 			<label for=obdobi>Dle roku</label>
-			<!-- <output for=fader id=zvoleneObdobi>50</output> -->
 			<input type=range class="range" min=1948 max=1990 value=1 id=obdobi step=1 list=zvolitObdobi oninput="draw(map, mapsDataJSON, value)">
 			<div class="years">
 				<div class="text-left">1948</div>
 				<div class="text-right">1989</div>
 			</div>
+		</div> -->
+		<div class="slider x">
+			<label for=obdobi>Dle období</label>
+			<!-- <output for=fader id=zvoleneObdobi>50</output> -->
+			<input type=range class="range" min=1948 max=1951 value=1 id=obdobi step=1 list=zvolitObdobi oninput="draw(map, mapsDataJSON, value)">
 		</div>
 	</aside>
 	<section class="map">
@@ -78,6 +82,7 @@
 	</script>
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
 	<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclusterer/1.0.2/src/markerclusterer_compiled.js"></script>
 	<script type="text/javascript" src="js/map-custom.js"></script>
 
