Div for showing additional info

--- a/index.html
+++ b/index.html
@@ -67,6 +67,65 @@
 		</div>
 	</aside>
 	<section class="map">
+		<div class="mapbox">
+			<h3>Info o bodu na mapě</h3>
+			<dl>
+				<dt>
+					Číslo osoby
+				</dt>
+				<dd id="cislo_osoby">
+					136
+				</dd>
+				<dt>
+					Věk
+				</dt>
+				<dd id="vek_h">
+					24
+				</dd>
+				<dt>
+					Státní příslušnost
+				</dt>
+				<dd id="statni_prislusnost">
+					československo - čsr, čssr
+				</dd>
+				<dt>
+					GPS bydliště
+				</dt>
+				<dd id="gps_bydliste">
+					49.740692,13.38834
+				</dd>
+				<dt>
+					GPS incidentu
+				</dt>
+				<dd id="gps_incidentu">
+					49.898947,12.550136
+				</dd>
+				<dt>
+					Směr přechodu
+				</dt>
+				<dd id="smer_prechodu">
+					neurčeno
+				</dd>
+				<dt>
+					Úmrtí
+				</dt>
+				<dd id="umrti">
+					příčinou úmrtí byla střelba pohraničníků, případně příslušní
+				</dd>
+				<dt>
+					Období incidentu
+				</dt>
+				<dd id="obdobi_incidentu">
+					1948 - 1950
+				</dd>
+				<dt>
+					Rok
+				</dt>
+				<dd id="rok">
+					1949
+				</dd>
+			</dl>
+		</div>
 		<div id="map-canvas"></div>
 	</section>
 	<footer>
