--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEX0ppwsuLCVSqKzyDkj5KDTnx3KXt_zw"></script>
 
+	<script src="//use.typekit.net/ick7ets.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 </head>
 <body>
 	<header>
