--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)"><br>Vše
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)"><br>1948 ——————————— 1950
+					<input type="radio" class="radio option" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)"><br>1948 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1950
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1951,1965" onchange="draw(map, mapsDataJSON, value)"><br>1951 ——————————— 1965
+					<input type="radio" class="radio option" name="radio_button" value="1951,1965" onchange="draw(map, mapsDataJSON, value)"><br>1951 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1965
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1966,1971" onchange="draw(map, mapsDataJSON, value)"><br>1966 ——————————— 1971
+					<input type="radio" class="radio option" name="radio_button" value="1966,1971" onchange="draw(map, mapsDataJSON, value)"><br>1966 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1971
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1972,1989" onchange="draw(map, mapsDataJSON, value)"><br>1972 ——————————— 1989
+					<input type="radio" class="radio option" name="radio_button" value="1972,1989" onchange="draw(map, mapsDataJSON, value)"><br>1972 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1989
 				</label>
 			</div>
 		</div>
