The "All" button graphics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="checkbox">
 			<div class="options">
 				<label class="text-center active">
-					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)"><br>Vše
+					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)"><br><span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>—— Vše <span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>——
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)"><br>1948 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1950
