--- a/index.html
+++ b/index.html
@@ -34,19 +34,29 @@
 		<div class="checkbox">
 			<div class="options">
 				<label class="text-center active">
-					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)"><br><span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>—— Vše <span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>——
+					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)">
+					<br>
+					<span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>—— Vše <span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>——
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)"><br>1948 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1950
+					<input type="radio" class="radio option" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)">
+					<br>
+					1948 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1950
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1951,1965" onchange="draw(map, mapsDataJSON, value)"><br>1951 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1965
+					<input type="radio" class="radio option" name="radio_button" value="1951,1965" onchange="draw(map, mapsDataJSON, value)">
+					<br>
+					1951 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1965
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1966,1971" onchange="draw(map, mapsDataJSON, value)"><br>1966 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1971
+					<input type="radio" class="radio option" name="radio_button" value="1966,1971" onchange="draw(map, mapsDataJSON, value)">
+					<br>
+					1966 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1971
 				</label>
 				<label class="text-center">
-					<input type="radio" class="radio option" name="radio_button" value="1972,1989" onchange="draw(map, mapsDataJSON, value)"><br>1972 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1989
+					<input type="radio" class="radio option" name="radio_button" value="1972,1989" onchange="draw(map, mapsDataJSON, value)">
+					<br>
+					1972 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1989
 				</label>
 			</div>
 		</div>
@@ -57,7 +67,8 @@
 	</aside>
 	<section class="map">
 		<div class="mapbox">
-			<h3>Info o bodu na mapě</h3>
+			<!-- <h3>Info o bodu na mapě</h3> -->
+			<br>
 			<dl>
 				<dt>
 					Číslo osoby
