--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
 		</div>
 		<div id="map-canvas"></div>
 	</section>
-<!-- 	<footer>
-
-	</footer> -->
+	<footer>
+	</footer>
 
 <script src="js/main.js"></script>
 
