Active class for mapbox on click on marker

--- a/index.html
+++ b/index.html
@@ -67,15 +67,14 @@
 				</label>
 			</div>
 		</div>
-<!-- 		<div class="slider x">
-			<label for=obdobi>Dle období</label>
-			<input type=range class="range" min=1948 max=1951 value=1 id=obdobi step=1 list=zvolitObdobi oninput="draw(map, mapsDataJSON, value)">
-		</div> -->
 	</aside>
 	<section class="map">
-		<div class="mapbox">
+		<div id="mapbox" class="mapbox">
 			<!-- <h3>Info o bodu na mapě</h3> -->
 			<br>
+			<h3 class="text-center">
+				Kliknutím na jakýkoli bod na mapě se vám zde o něm zobrazí další informace.
+			</h3>
 			<dl>
 				<dt>
 					Číslo osoby
