--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 </head>
 <body>
+
 	<header>
 		<h1 class="">
 			<span class="black">Přes železnou oponu </span>Usmrcení na&#160;československé hranici
@@ -35,100 +36,106 @@
 				Projekt Dokumentace usmrcených na čs.&#160;hranici 1948–1989 se zabývá fenoménem neúspěšných přechodů hranice, které skončily úmrtím. Zkoumání rysů množiny usmrcených osob a&#160;jejich proměn v&#160;čase a&#160;prostoru umožňuje sada dat s&#160;informacemi ke 276 zdokumentovaným případům usmrcených. Základní proměnné databáze (např. místo narození, bydliště, incidentu – včetně GPS lokace) jsou sestaveny na základě informací v&#160;primárních archivních dokumentech. Další proměnné jsou konstruovány či harmonizovány tak, aby rozšířily možnosti statistické analýzy (např. vzdálenost mezi místem bydliště a&#160;incidentu). Kvantitativní zpracování je kombinováno s&#160;biografickými sondami, vychází z právního a&#160;historického kontextu a&#160;výsledky jsou k němu zpět vztaženy.
 			</p>
 		</article>
+		<span>menu</span>
 	</header>
 
-	<aside id="controls" class="controls">
+	<section id="controls" class="controls">
 		<div class="checkbox">
 			<div class="options">
 				<label class="text-center active">
 					<input checked type="radio" class="radio option" name="radio_button" value="1948,1989" onchange="draw(map, mapsDataJSON, value)">
-					<br>
+					<!-- <br> -->
 					<span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>—— Vše <span class="hide-for-small">—</span><span class="hide-for-medium">——</span><span class="hide-for-large">—</span>——
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1948,1950" onchange="draw(map, mapsDataJSON, value)">
-					<br>
+					<!-- <br> -->
 					1948 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1950
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1951,1965" onchange="draw(map, mapsDataJSON, value)">
-					<br>
+					<!-- <br> -->
 					1951 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1965
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1966,1971" onchange="draw(map, mapsDataJSON, value)">
-					<br>
+					<!-- <br> -->
 					1966 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1971
 				</label>
 				<label class="text-center">
 					<input type="radio" class="radio option" name="radio_button" value="1972,1989" onchange="draw(map, mapsDataJSON, value)">
-					<br>
+					<!-- <br> -->
 					1972 <span class="hide-for-small">——</span><span class="hide-for-medium">———</span><span class="hide-for-large">——</span>——— 1989
 				</label>
 			</div>
 		</div>
-	</aside>
-	<section class="map">
-		<div id="mapbox" class="mapbox">
-			<!-- <h3>Info o bodu na mapě</h3> -->
-			<br>
-			<h3 class="text-center">
-				Kliknutím na jakýkoli bod na mapě se vám zde o něm zobrazí další informace.
-			</h3>
-			<dl>
-				<dt>
-					Číslo osoby
-				</dt>
-				<dd id="cislo_osoby">
-				</dd>
-				<dt>
-					Věk
-				</dt>
-				<dd id="vek_h">
-				</dd>
-				<dt>
-					Státní příslušnost
-				</dt>
-				<dd id="statni_prislusnost">
-				</dd>
-				<dt>
-					GPS bydliště
-				</dt>
-				<dd id="gps_bydliste">
-				</dd>
-				<dt>
-					GPS incidentu
-				</dt>
-				<dd id="gps_incidentu">
-				</dd>
-				<dt>
-					Směr přechodu
-				</dt>
-				<dd id="smer_prechodu">
-				</dd>
-				<dt>
-					Úmrtí
-				</dt>
-				<dd id="umrti">
-				</dd>
-				<dt>
-					Období incidentu
-				</dt>
-				<dd id="obdobi_incidentu">
-				</dd>
-				<dt>
-					Rok
-				</dt>
-				<dd id="rok">
-				</dd>
-			</dl>
-		</div>
-		<div id="map-canvas"></div>
 	</section>
-	<footer>
-	</footer>
 
-<script src="js/main.js"></script>
+	<section id="filter" class="filter hidden">
+		<span>
+			Filtrování dle dalších kategorií
+		</span>
+	</section>
+
+	<section class="infobox">
+		<div class="center-wrapper">
+			<div class="centered">
+				<div class="info">
+					<dl>
+						<dt>
+							Číslo osoby
+						</dt>
+						<dd id="cislo_osoby">
+						</dd>
+						<dt>
+							Věk
+						</dt>
+						<dd id="vek_h">
+						</dd>
+						<dt>
+							Státní příslušnost
+						</dt>
+						<dd id="statni_prislusnost">
+						</dd>
+						<dt>
+							GPS bydliště
+						</dt>
+						<dd id="gps_bydliste">
+						</dd>
+						<dt>
+							GPS incidentu
+						</dt>
+						<dd id="gps_incidentu">
+						</dd>
+						<dt>
+							Směr přechodu
+						</dt>
+						<dd id="smer_prechodu">
+						</dd>
+						<dt>
+							Úmrtí
+						</dt>
+						<dd id="umrti">
+						</dd>
+						<dt>
+							Období incidentu
+						</dt>
+						<dd id="obdobi_incidentu">
+						</dd>
+						<dt>
+							Rok
+						</dt>
+						<dd id="rok">
+						</dd>
+					</dl>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<div id="map-canvas"></div>
+
+	<script src="js/main.js"></script>
 
 </body>
 </html>
