Removed useless information from infobox

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
 	<section class="infobox">
 		<div class="info">
+			<h1>Informace o zvoleném bodu</h1>
 			<dl>
 				<dt>
 					Číslo osoby
@@ -92,11 +93,6 @@
 				<dd id="statni_prislusnost">
 				</dd>
 				<dt>
-					GPS bydliště
-				</dt>
-				<dd id="gps_bydliste">
-				</dd>
-				<dt>
 					GPS incidentu
 				</dt>
 				<dd id="gps_incidentu">
@@ -110,11 +106,6 @@
 					Úmrtí
 				</dt>
 				<dd id="umrti">
-				</dd>
-				<dt>
-					Období incidentu
-				</dt>
-				<dd id="obdobi_incidentu">
 				</dd>
 				<dt>
 					Rok
