UI buttons & UI fixes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 		<span>
 			Filtrování dle dalších kategorií
 		</span>
+		<div class="roll-up">
+			<a href="#"><img src="img/ui/roll-up.png" alt="Schovat okno"><span>schovat</span></a>
+		</div>
 	</section>
 
 	<section class="infobox">
@@ -113,6 +116,9 @@
 				<dd id="rok">
 				</dd>
 			</dl>
+			<div class="close">
+				<a href="#"><img src="img/ui/close.png" alt="Zavřít okno"></a>
+			</div>
 		</div>
 	</section>
 
