--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				Projekt Dokumentace usmrcených na čs.&#160;hranici 1948–1989 se zabývá fenoménem neúspěšných přechodů hranice, které skončily úmrtím. Zkoumání rysů množiny usmrcených osob a&#160;jejich proměn v&#160;čase a&#160;prostoru umožňuje sada dat s&#160;informacemi ke 276 zdokumentovaným případům usmrcených. Základní proměnné databáze (např. místo narození, bydliště, incidentu – včetně GPS lokace) jsou sestaveny na základě informací v&#160;primárních archivních dokumentech. Další proměnné jsou konstruovány či harmonizovány tak, aby rozšířily možnosti statistické analýzy (např. vzdálenost mezi místem bydliště a&#160;incidentu). Kvantitativní zpracování je kombinováno s&#160;biografickými sondami, vychází z právního a&#160;historického kontextu a&#160;výsledky jsou k němu zpět vztaženy.
 			</p>
 		</article>
-		<span>menu</span>
+		<span><img class="left" src="img/ui/burger.png" alt="Menu"> Menu</span>
 	</header>
 
 	<section id="controls" class="controls">
@@ -78,8 +78,8 @@
 				<!-- <div id="show-age" class="text-center small">20 — 43</div> -->
 
 				<div>
-					<div id="age-min" class="age-value left text-left small">20 let</div>
-					<div id="age-max" class="age-value right text-right small">43 let</div>
+					<div id="age-min" class="age-value left text-left small">od 20 let</div>
+					<div id="age-max" class="age-value right text-right small">do 43 let</div>
 				</div>
 				<hr>
 			</div>
@@ -95,7 +95,7 @@
 				<h4>Národnost</h4>
 				<label class="custom-select" for="">
 					<select>
-						<option value="volvo">Volvo</option>
+						<option value="volvo">všechny národnosti</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
@@ -107,7 +107,7 @@
 				<h4>Okres bydliště</h4>
 				<label class="custom-select" for="">
 					<select>
-						<option value="volvo">Volvo</option>
+						<option value="volvo">všechny okresy bydliště</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
@@ -119,7 +119,7 @@
 				<h4>Okres incidentu</h4>
 				<label class="custom-select" for="">
 					<select>
-						<option value="volvo">Volvo</option>
+						<option value="volvo">všechny okresy incidentu</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
@@ -131,7 +131,7 @@
 				<h4>Způsob úmrtí</h4>
 				<label class="custom-select" for="">
 					<select>
-						<option value="volvo">Volvo</option>
+						<option value="volvo">všechny způsoby úmrtí</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
