filterInput complete (issue-24)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div id="filter-nationality" class="filter">
 				<h4>Národnost</h4>
 				<label class="custom-select" for="">
-					<select>
+					<select id="nationality" >
 						<option value="volvo">všechny národnosti</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
@@ -106,7 +106,7 @@
 			<div id="filter-residence" class="filter">
 				<h4>Okres bydliště</h4>
 				<label class="custom-select" for="">
-					<select>
+					<select id="residence">
 						<option value="volvo">všechny okresy bydliště</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
@@ -118,7 +118,7 @@
 			<div id="filter-incident" class="filter">
 				<h4>Okres incidentu</h4>
 				<label class="custom-select" for="">
-					<select>
+					<select id="incident" >
 						<option value="volvo">všechny okresy incidentu</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
@@ -130,7 +130,7 @@
 			<div id="filter-death" class="filter">
 				<h4>Způsob úmrtí</h4>
 				<label class="custom-select" for="">
-					<select>
+					<select id="death">
 						<option value="volvo">všechny způsoby úmrtí</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
