--- a/index.html
+++ b/index.html
@@ -96,9 +96,16 @@
 				<label class="custom-select" for="">
 					<select>
 						<option value="volvo">všechny národnosti</option>
-						<option value="saab">Saab</option>
-						<option value="opel">Opel</option>
-						<option value="audi">Audi</option>
+						<option value="saab">československá</option>
+						<option value="opel">maďarská</option>
+						<option value="audi">NDR</option>
+						<option value="audi">německá (do r.1949)</option>
+						<option value="audi">polská</option>
+						<option value="audi">rakouská</option>
+						<option value="audi">SRN</option>
+						<!-- Pro potřeby webu není problém nahradit kategorii "jiná" jednotlivými národnostmi -->
+						<option value="audi">jiná</option>
+						<option value="audi">neurčená</option>
 					</select>
 				</label>
 				<hr>
