Filter nation, Filter death added (issue-24)

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<h4>Národnost</h4>
 				<label class="custom-select" for="">
 					<select id="nationality" >
-						<option value="volvo">všechny národnosti</option>
+						<option value="false">všechny národnosti</option>
 						<option value="saab">československá</option>
 						<option value="opel">maďarská</option>
 						<option value="audi">NDR</option>
@@ -114,7 +114,7 @@
 				<h4>Okres bydliště</h4>
 				<label class="custom-select" for="">
 					<select id="residence">
-						<option value="volvo">všechny okresy bydliště</option>
+						<option value="false">všechny okresy bydliště</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
@@ -126,7 +126,7 @@
 				<h4>Okres incidentu</h4>
 				<label class="custom-select" for="">
 					<select id="incident" >
-						<option value="volvo">všechny okresy incidentu</option>
+						<option value="false">všechny okresy incidentu</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
@@ -138,7 +138,7 @@
 				<h4>Způsob úmrtí</h4>
 				<label class="custom-select" for="">
 					<select id="death">
-						<option value="volvo">všechny způsoby úmrtí</option>
+						<option value="false">všechny způsoby úmrtí</option>
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
