--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 	</section>
 
 	<div id="map-canvas"></div>
+	<a href="" id="reset-view" class="button text-center">x</a>
 
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/main.js"></script>
