--- a/index.html
+++ b/index.html
@@ -78,16 +78,17 @@
 				<!-- <div id="show-age" class="text-center small">20 — 43</div> -->
 
 				<div>
-					<div id="age-min" class="age-value left text-left small">od 20 let</div>
-					<div id="age-max" class="age-value right text-right small">do 43 let</div>
+					<div id="age-min" class="age-value left text-left small">od 15 let</div>
+					<div id="age-max" class="age-value right text-right small">do 50 let</div>
 				</div>
 				<hr>
 			</div>
-			<div id="filter-sex" class="filter">
+			<div id="filter-gender" class="filter">
 				<h4>Pohlaví</h4>
-				<label>
-					<input type="radio" name="sex" value="male" checked>Muž
-					<input type="radio" name="sex" value="female">Žena
+				<label id="gender">
+					<input type="checkbox" name="gender" value="0" checked>Muž
+					<input type="checkbox" name="gender" value="1" checked>Žena
+					<!-- <input type="checkbox" name="gender" value="2" checked>neurčeno -->
 				</label>
 				<hr>
 			</div>
@@ -95,17 +96,26 @@
 				<h4>Národnost</h4>
 				<label class="custom-select" for="">
 					<select id="nationality" >
+						<!-- VALUE shoud be numbers instead of such a long string -->
+						<!-- 0 = neurčeno -->
+						<!-- 1 = česká -->
+						<!-- 2 = slovenská -->
+						<!-- 3 = polská -->
+						<!-- 4 = maďarská -->
+						<!-- 5 = rakouská -->
+						<!-- 6 = německá -->
+						<!-- 7 = jiná -->
 						<option value="false">všechny národnosti</option>
-						<option value="saab">československá</option>
-						<option value="opel">maďarská</option>
-						<option value="audi">NDR</option>
-						<option value="audi">německá (do r.1949)</option>
-						<option value="audi">polská</option>
-						<option value="audi">rakouská</option>
-						<option value="audi">SRN</option>
+						<option value="československo - čsr, čssr">československá</option>
+						<option value="maďarsko">maďarská</option>
+						<option value="ndr">NDR</option>
+						<option value="německo -do r. 1949">německá (do r.1949)</option>
+						<option value="polsko">polská</option>
+						<option value="rakousko">rakouská</option>
+						<option value="srn">SRN</option>
 						<!-- Pro potřeby webu není problém nahradit kategorii "jiná" jednotlivými národnostmi -->
-						<option value="audi">jiná</option>
-						<option value="audi">neurčená</option>
+						<option value="jiná">jiná</option>
+						<option value="neurčeno">neurčená</option>
 					</select>
 				</label>
 				<hr>
@@ -138,17 +148,34 @@
 				<h4>Způsob úmrtí</h4>
 				<label class="custom-select" for="">
 					<select id="death">
+						<!-- VALUE shoud be numbers instead of such a long string -->
+						<!-- 0 = zasažení el. proudem (v hraničním zátarasu) -->
+						<!-- 1 = střelba pohraničníků, případně příslušníků armády či SNB -->
+						<!-- 2 = zranění způsobené pádem (sestřeleného) letadla -->
+						<!-- 3 = střelba usmrcené osoby (příp. jejího společníka) – tj. sebevražda -->
+						<!-- 4 = zranění způsobené autohavárií -->
+						<!-- 5 = utonutí -->
+						<!-- 6 = utonutí po střelném zranění -->
+						<!-- 7 = zranění výbuchem protipěchotní miny -->
+						<!-- 8 = zranění způsobené psy Pohraniční stráže -->
 						<option value="false">všechny způsoby úmrtí</option>
-						<option value="saab">Saab</option>
-						<option value="opel">Opel</option>
-						<option value="audi">Audi</option>
+						<option value="příčinou úmrtí bylo zasažení el. proudem v hraničním zátaras">zasažení el. proudem (v hraničním zátarasu)</option>
+						<option value="příčinou úmrtí byla střelba pohraničníků, případně příslušní">střelba pohraničníků, případně příslušníků armády či SNB</option>
+						<option value="3">zranění způsobené pádem (sestřeleného) letadla</option>
+						<option value="příčinou úmrtí byla střelba usmrcené osoby případně jejího s">střelba usmrcené osoby (příp. jejího společníka) – tj. sebevražda</option>
+						<option value="5">zranění způsobené autohavárií</option>
+						<option value="6">utonutí</option>
+						<option value="7">utonutí po střelném zranění</option>
+						<option value="8">zranění výbuchem protipěchotní miny</option>
+						<option value="9">zranění způsobené psy Pohraniční stráže</option>
 					</select>
 				</label>
+				<hr>
 			</div>
+			<a href="" id="reset-filters" class="small text-center">Resetovat filtrování</a>
 		</div>
 		<a id="roll-up-filters" class="roll-up" href="#">
 			<div>
-				<!-- <img src="img/ui/roll-up.png" alt="Schovat okno"> -->
 				<span>schovat</span>
 			</div>
 		</a>
