--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 			<div id="filter-gender" class="filter">
 				<h4>Pohlaví</h4>
 				<label id="gender">
-					<input type="checkbox" name="gender" value="0" checked>Muž
-					<input type="checkbox" name="gender" value="1" checked>Žena
+					<input type="checkbox" name="gender" value="0" checked>&male;
+					<input type="checkbox" name="gender" value="1" checked>&female;
 					<!-- <input type="checkbox" name="gender" value="2" checked>neurčeno -->
 				</label>
 				<hr>
@@ -172,7 +172,7 @@
 				</label>
 				<hr>
 			</div>
-			<a href="" id="reset-filters" class="small text-center">Resetovat filtrování</a>
+			<a href="" id="reset-filters" class="small text-center">&orarr; Resetovat filtrování</a>
 		</div>
 		<a id="roll-up-filters" class="roll-up" href="#">
 			<div>
@@ -232,7 +232,7 @@
 	</section>
 
 	<div id="map-canvas"></div>
-	<a href="" id="reset-view" class="button text-center">x</a>
+	<a href="" id="reset-view" class="button text-center">&orarr;</a>
 
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/main.js"></script>
