--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 	</section>
 
 	<div id="map-canvas"></div>
-	<a href="" id="reset-view" class="button text-center">&orarr;</a>
+	<a href="#" id="reset-view" class="button text-center">&orarr;</a>
 
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/main.js"></script>
