--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<hr>
 			</div>
 			<div id="filter-nationality" class="filter">
-				<h4>Národnost</h4>
+				<h4>Státní příslušnost</h4>
 				<label class="custom-select" for="">
 					<select id="nationality" >
 						<!-- VALUE shoud be numbers instead of such a long string -->
@@ -121,7 +121,7 @@
 				<hr>
 			</div>
 			<div id="filter-residence" class="filter">
-				<h4>Okres bydliště</h4>
+				<h4>Příslušný útvar příhraniční stráže</h4>
 				<label class="custom-select" for="">
 					<select id="residence">
 						<option value="false">všechny okresy bydliště</option>
