--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<hr>
 			</div>
 			<div id="filter-residence" class="filter">
-				<h4>Příslušný útvar příhraniční stráže</h4>
+				<h4>Okres bydliště</h4>
 				<label class="custom-select" for="">
 					<select id="residence">
 						<option value="false">všechny okresy bydliště</option>
@@ -133,7 +133,7 @@
 				<hr>
 			</div>
 			<div id="filter-incident" class="filter">
-				<h4>Okres incidentu</h4>
+				<h4>Příslušný útvar příhraniční stráže</h4>
 				<label class="custom-select" for="">
 					<select id="incident" >
 						<option value="false">všechny okresy incidentu</option>
