--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 						<option value="saab">Saab</option>
 						<option value="opel">Opel</option>
 						<option value="audi">Audi</option>
+						<option value="audi">Audi2</option>
 					</select>
 				</label>
 				<hr>
